--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1,41 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "source": [
-        "Q1\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "wJ44CI67F8H3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "39cwzhFLGPpk"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "8mFTNFeoFdEH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Q2"
-      ],
-      "metadata": {
-        "id": "dxlgJgQMF3uo"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "! git clone https://github.com/amn8ge/eda_assignment.git"
@@ -45,27 +10,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q_8LY6xeBuyx",
-        "outputId": "2cf8a880-d70e-4272-e7a8-2fa945e4e8e2"
+        "outputId": "631e5cd1-8b9d-4442-9284-de323e189c9d"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'eda_assignment'...\n",
-            "remote: Enumerating objects: 9, done.\u001b[K\n",
-            "remote: Counting objects: 100% (2/2), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
-            "remote: Total 9 (delta 0), reused 0 (delta 0), pack-reused 7 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (9/9), 799.41 KiB | 9.52 MiB/s, done.\n"
+            "remote: Enumerating objects: 21, done.\u001b[K\n",
+            "remote: Counting objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Total 21 (delta 0), reused 0 (delta 0), pack-reused 12 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (21/21), 9.76 MiB | 16.31 MiB/s, done.\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -74,7 +39,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JL8-V0Ew-ocU",
-        "outputId": "ac02f189-8031-4c18-b362-32a1458318b5"
+        "outputId": "0ea62f6c-fee6-4af9-f6f5-c2a0033e3e61"
       },
       "outputs": [
         {
@@ -101,9 +66,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J07u0Hs3AhAt",
-        "outputId": "faba56b1-d79a-4e4d-cf7c-343f9bcf530f"
+        "outputId": "9de63609-a39f-4840-ad48-cc7253bedcfc"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,22 +89,41 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "clQwcy5eC6Yf",
-        "outputId": "115b0b05-3427-4f25-9ec3-3eb822fd4a48"
+        "outputId": "d8507bbd-f084-4b6a-aaa3-6c0b41146502"
       },
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "total 3388\n",
-            "drwxr-xr-x 2 root root    4096 Sep  8 01:53 \u001b[0m\u001b[01;34m.\u001b[0m/\n",
-            "drwxr-xr-x 4 root root    4096 Sep  8 01:53 \u001b[01;34m..\u001b[0m/\n",
-            "-rw-r--r-- 1 root root 3414307 Sep  8 01:53 airbnb_hw.csv\n",
-            "-rw-r--r-- 1 root root   42237 Sep  8 01:53 drilling_rigs.csv\n"
+            "total 16\n",
+            "drwxr-xr-x 1 root root 4096 Sep  5 13:36 \u001b[0m\u001b[01;34m.\u001b[0m/\n",
+            "drwxr-xr-x 1 root root 4096 Sep  9 02:00 \u001b[01;34m..\u001b[0m/\n",
+            "drwxr-xr-x 4 root root 4096 Sep  5 13:35 \u001b[01;34m.config\u001b[0m/\n",
+            "drwxr-xr-x 1 root root 4096 Sep  5 13:36 \u001b[01;34msample_data\u001b[0m/\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q1 - **all pictures of proofs are in the github repo in the \"data\" folder**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wJ44CI67F8H3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q2"
+      ],
+      "metadata": {
+        "id": "dxlgJgQMF3uo"
+      }
     },
     {
       "cell_type": "markdown",
@@ -155,7 +139,6 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
         "\n",
         "airbnb = pd.read_csv('airbnb_hw.csv')"
       ],
@@ -187,7 +170,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 435
+          "height": 379
         },
         "id": "SzFpV1mJH_Wr",
         "outputId": "20f36c74-a417-4ecd-9629-277e826a080e"
@@ -594,7 +577,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 282
+          "height": 281
         },
         "id": "SUlz2URKMx3a",
         "outputId": "041043f2-0c71-41fb-c299-0087bdf79f93"
@@ -1005,7 +988,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 489
         },
         "id": "tTr8nduKRB0G",
         "outputId": "3b6fd1b4-fe8f-43c5-87be-c02486b7f450"
@@ -1044,7 +1027,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 489
         },
         "id": "mWuy4WOnS74e",
         "outputId": "b4a3e4a3-906f-41dd-c250-486963592c28"
@@ -1085,7 +1068,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 476
+          "height": 475
         },
         "id": "zlxbzjNjTg42",
         "outputId": "58a3dfae-8fe2-41ce-abba-c39e9acb4f93"
@@ -1160,7 +1143,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 489
         },
         "id": "RPdumO67YG-2",
         "outputId": "363d31c8-cb66-4b6e-9801-2c0909a7d575"
@@ -1214,7 +1197,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 736
+          "height": 728
         },
         "id": "LEhfGuPpbYxA",
         "outputId": "9be3f7f2-297a-4b8e-e481-e293081470a8"
@@ -1564,7 +1547,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 629
+          "height": 605
         },
         "id": "kMUP9t5VtKoa",
         "outputId": "0e99fd1c-6abb-4266-9a56-d3578711cc16"
@@ -2054,7 +2037,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 584
+          "height": 564
         },
         "id": "eh16CBYSz_5Q",
         "outputId": "6d6174c7-f888-4e25-ca03-471140d71822"
@@ -2114,12 +2097,12 @@
         "# The huge swings level out over time, after January of 1971, and the month over month differences are much smaller."
       ],
       "metadata": {
-        "id": "AkRCV-Do2wc3",
-        "outputId": "23ae7a17-4f47-4ae7-c6c7-2e6459d2ddbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "AkRCV-Do2wc3",
+        "outputId": "23ae7a17-4f47-4ae7-c6c7-2e6459d2ddbe"
       },
       "execution_count": 95,
       "outputs": [
@@ -2168,12 +2151,12 @@
         ")"
       ],
       "metadata": {
-        "id": "gzkUDVg34ee3",
-        "outputId": "3a5cc7bb-1bcc-4d74-ce4b-99ef098996a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
-        }
+          "height": 466
+        },
+        "id": "gzkUDVg34ee3",
+        "outputId": "3a5cc7bb-1bcc-4d74-ce4b-99ef098996a3"
       },
       "execution_count": 106,
       "outputs": [
@@ -2197,17 +2180,6 @@
           },
           "metadata": {}
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "y9dHsM_c-ocT"
-      },
-      "source": [
-        "# Assignment: Exploratory Data Analysis\n",
-        "### `! git clone https://github.com/ds3001f25/eda_assignment.git`\n",
-        "### Do Q1, Q2, and Q3."
       ]
     },
     {
